--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.16.6",
     "effector": "^21.8.12",
     "effector-root": "^1.3.0",
+    "lodash": "^4.17.21",
     "patronum": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -30,6 +31,7 @@
     "@linaria/shaker": "^3.0.0-beta.7",
     "@linaria/webpack-loader": "^3.0.0-beta.7",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.171",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
