--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "antd": "^4.16.6",
     "effector": "^21.8.12",
+    "effector-react": "^21.3.3",
     "effector-root": "^1.3.0",
     "lodash": "^4.17.21",
     "patronum": "^1.1.0",
@@ -59,6 +60,7 @@
     "postcss-loader": "^6.1.1",
     "postcss-safe-parser": "^6.0.0",
     "prettier": "^2.3.2",
+    "regenerator-runtime": "^0.13.7",
     "typescript": "^4.3.5",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
